[package]
name = "nft-pixelboard"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Gear Technologies"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git" }
nft-pixelboard-io = { path = "io" }
gear-lib = { git = "https://github.com/gear-dapps/gear-lib.git" }
ft-io = { git = "https://github.com/gear-dapps/fungible-token.git" }
nft-io = { git = "https://github.com/gear-dapps/non-fungible-token.git" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }
