[package]
name = "nft-pixelboard"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], rev = "d4552434" }
nft-pixelboard-io = { path = "io" }
gear-lib = { git = "https://github.com/gear-dapps/gear-lib.git", tag = "0.3.1" }
ft-io = { git = "https://github.com/gear-dapps/fungible-token.git", tag = "0.1.2" }
nft-io = { git = "https://github.com/gear-dapps/non-fungible-token.git", tag = "0.2.3" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", rev = "d4552434" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "d4552434" }
