[package]
name = "nft-pixelboard"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
codec = { package = "parity-scale-codec", version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
gear-lib = { git = "https://github.com/gear-dapps/gear-lib.git", tag = "0.3.2" }
ft-io = { git = "https://github.com/gear-dapps/fungible-token.git", tag = "0.1.3" }
nft-io = { git = "https://github.com/gear-dapps/non-fungible-token.git", tag = "0.2.4" }

[dev-dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable", features = ["debug"] }
gtest = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
